# polynomial-tools

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
bench-results/: README.md
doc/: athanasiadis-wagner-lace.md  bezout-interlacing.md  refactoring-notes.md
examples/: bench_bareiss_vs_modular_linalg.rs  bench_bezout_vs_sturm.rs  bench_positive_real_rooted.rs  benchmark_recurrence_fixtures.rs  generate_recurrence_benchmarks.rs
fixtures/recurrence-benchmarks/: README.md  manifest.tsv  regenerate-json.sh
fixtures/recurrence-benchmarks/json/: 01_scalar_geometric.json  02_scalar_fibonacci.json  03_binomial_powers.json  04_chebyshev_t.json  05_factorial_index.json  06_affine_product.json  07_hermite_indexed_second_order.json  08_inhomogeneous_linear.json  09_inhomogeneous_quadratic.json  10_alternating_scalar.json  11_alternating_fibonacci.json  12_eulerian_derivative.json  13_derivative_appell.json  14_second_derivative.json  15_mixed_derivative_second_order.json  16_denominator_linear_index.json  17_denominator_quadratic_index.json  18_denominator_with_t_rhs.json  19_denominator_derivative.json  20_complex_mixed_alternating_derivative.json  21_fifth_order_mixed_coefficients.json  22_fifth_derivative_generic.json  23_sparse_second_derivative_lag.json  24_oeis_a114655_denominator_derivative.json  25_oeis_a110319_skip_denominator_derivative.json  26_oeis_a156289_second_derivative.json  27_oeis_a219836_two_lag_derivative.json  28_oeis_a089627_denominator_second_order.json  29_oeis_a101920_three_lag_denominator_derivative.json  30_oeis_a177970_order8_closed_form.json  31_oeis_a321331_signed_derivative_lag.json  32_oeis_a390433_quadratic_index_second_derivative.json  33_oeis_a008292_eulerian_variant_derivative.json  34_oeis_a019538_derivative_appell.json  35_oeis_a035607_two_lag_constant_t.json  36_oeis_a049218_quadratic_index_lag.json  37_oeis_a088729_second_derivative_sturm.json  38_oeis_a104684_denominator_second_order.json  (+58 more)
fixtures/recurrence-overfits/: README.md  manifest.tsv
mcp/: Cargo.toml  README.md  install.sh
mcp/src/: lib.rs  main.rs
mcp/tests/: stdio_smoke.rs
src/: basis.rs  bkw.rs  brenti_sequence.rs  decomposition.rs  interlacing_matrix.rs  lib.rs  linalg.rs  parse.rs  polynomial.rs  real_rootedness.rs  recurrence.rs  root_count.rs  sequences.rs  sturm.rs  sturm_cf.rs  tnn_network.rs  vec_poly.rs
tests/: cli_bigint.rs  interlacing_api.rs  recurrence_json_fixtures.rs  recurrence_overfit_fixtures.rs
web/: Cargo.toml  build.sh  index.html
web/src/: lib.rs
(+97 files in other folders)
