[package]
name = "polynomial-tools"
version = "0.2.1-rc.1"
edition = "2021"
license = "MIT"
authors = ["Per Alexandersson <per.w.alexandersson@gmail.com>"]
description = "Univariate polynomial toolkit: exact real-rootedness, interlacing, gamma-positivity, resultants, Ehrhart/h*-vectors, recurrence search, standard sequences"
readme = "README.md"
documentation = "https://docs.rs/polynomial-tools"
keywords = ["polynomials", "real-rootedness", "interlacing", "combinatorics"]
categories = ["mathematics", "science"]

[dependencies]
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
num-integer = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
