[package]
name = "polynomial-tools-mcp"
version = "0.2.1-rc.3"
edition = "2021"
license = "MIT"
authors = ["Per Alexandersson <per.w.alexandersson@gmail.com>"]
description = "Model Context Protocol server for polynomial-tools"
readme = "README.md"

[[bin]]
name = "polytool-mcp"
path = "src/main.rs"

[dependencies]
polynomial-tools = { path = ".." }
num-bigint = "0.4"
rmcp = { version = "0.16.0", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
