[package]
name = "polynomial-tools-web"
version = "0.2.1-rc.4"
edition = "2021"
description = "WebAssembly interface for polynomial-tools"

[lib]
crate-type = ["cdylib"]

[dependencies]
polynomial-tools = { path = ".." }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
